# motor-agents

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  agent_configurator.py  agent_hunter.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: mock_listings.json  msrp.json
evals/: run_evals.py
evals/cases/: deal_checker.json  hunter.json
hunter/: database.py  report.py  scorer.py  sources.py
pickers/: bmw.py
tests/: conftest.py  test_depreciation.py  test_msrp_lookup.py  test_scorer.py  test_sources_and_db.py
tools/: browser_session.py  depreciation.py  listing_extractor.py  msrp_lookup.py  scraper.py  vision_picker.py
utils/: agent_loop.py  cli.py  trace.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
